--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -19,7 +19,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
-
+        android:fontFamily="monospace"
         android:hint="@string/login_Username"
         android:inputType="textPersonName"
         android:maxLength="@integer/MAXUSERNAMELENGTH"
