--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -76,7 +76,8 @@
             android:layout_height="wrap_content"
             android:ems="10"
             android:hint="@string/fax_number"
-            android:inputType="number" />
+            android:inputType="number"
+            android:digits="0123456789+"/>
 
         <EditText
             android:id="@+id/user_licenseNumber_editText"
@@ -84,7 +85,8 @@
             android:layout_height="wrap_content"
             android:ems="10"
             android:hint="@string/licesneNumber"
-            android:inputType="number" />
+            android:inputType="number"
+            android:digits="0123456789+"/>
 
         <EditText
             android:id="@+id/user_emailAddress_editText"
@@ -124,7 +126,8 @@
             android:layout_height="wrap_content"
             android:ems="10"
             android:hint="@string/zip_code"
-            android:inputType="textPersonName" />
+            android:inputType="number"
+            android:digits="0123456789+"/>
 
         <LinearLayout
             android:layout_width="match_parent"
