--- a/app/src/main/res/layout/activity_add_customer.xml
+++ b/app/src/main/res/layout/activity_add_customer.xml
@@ -29,6 +29,11 @@
                     android:text="@string/cancel" />
             </LinearLayout>
 
+            <android.support.design.widget.TextInputLayout
+                android:id="@+id/customer_first_textInputLayout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
             <EditText
                 android:id="@+id/customer_first_editText"
                 android:layout_width="match_parent"
@@ -38,6 +43,12 @@
                 android:inputType="textPersonName"
                 android:hint="@string/first_name"
                 android:text="" />
+            </android.support.design.widget.TextInputLayout>
+
+            <android.support.design.widget.TextInputLayout
+                android:id="@+id/customer_last_textInputLayout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
 
             <EditText
                 android:id="@+id/customer_last_editText"
@@ -49,6 +60,13 @@
                 android:hint="@string/last_name"
                 android:text="" />
 
+            </android.support.design.widget.TextInputLayout>
+
+            <android.support.design.widget.TextInputLayout
+                android:id="@+id/customer_company_textInputLayout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
             <EditText
                 android:id="@+id/customer_company_editText"
                 android:layout_width="match_parent"
@@ -58,36 +76,53 @@
                 android:inputType="textPersonName"
                 android:hint="@string/company"
                 android:text="" />
+            </android.support.design.widget.TextInputLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="horizontal">
 
-                <EditText
-                    android:id="@+id/customer_phone_editText"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:ems="10"
-                    android:fontFamily="monospace"
-                    android:inputType="number"
-                    android:hint="@string/phone_number"
-                    android:text="" />
+                <android.support.design.widget.TextInputLayout
+                    android:id="@+id/customer_phone_textInputLayout"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content">
 
-                <EditText
-                    android:id="@+id/customer_fax_editText"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:ems="10"
-                    android:fontFamily="monospace"
-                    android:inputType="number"
-                    android:hint="@string/fax_number"
-                    android:text="" />
+                    <EditText
+                        android:id="@+id/customer_phone_editText"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:ems="10"
+                        android:fontFamily="monospace"
+                        android:hint="@string/phone_number"
+                        android:inputType="number"
+                        android:text="" />
+                </android.support.design.widget.TextInputLayout>
+
+                <android.support.design.widget.TextInputLayout
+                    android:id="@+id/customer_fax_textInputLayout"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content">
+
+                    <EditText
+                        android:id="@+id/customer_fax_editText"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:ems="10"
+                        android:fontFamily="monospace"
+                        android:hint="@string/fax_number"
+                        android:inputType="number"
+                        android:text="" />
+                </android.support.design.widget.TextInputLayout>
 
 
             </LinearLayout>
+            <android.support.design.widget.TextInputLayout
+                android:id="@+id/customer_email_textInputLayout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
 
             <EditText
                 android:id="@+id/customer_email_address_editText"
@@ -96,9 +131,14 @@
                 android:ems="10"
                 android:fontFamily="monospace"
                 android:inputType="textEmailAddress"
-
                 android:hint="@string/email"
                 android:text="" />
+            </android.support.design.widget.TextInputLayout>
+
+            <android.support.design.widget.TextInputLayout
+                android:id="@+id/customer_street_address_textInputLayout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
 
             <EditText
                 android:id="@+id/customer_street_address_editText"
@@ -110,6 +150,7 @@
                 android:imeOptions="actionDone"
                 android:hint="@string/street"
                 android:text="" />
+            </android.support.design.widget.TextInputLayout>
 
 
             <LinearLayout
@@ -117,21 +158,31 @@
                 android:layout_height="match_parent"
                 android:orientation="horizontal">
 
-                <EditText
-                    android:id="@+id/customer_city_editText"
-                    android:layout_width="154dp"
-                    android:layout_height="match_parent"
-                    android:ems="10"
-                    android:fontFamily="monospace"
-                    android:hint="@string/city"
-                    android:inputType="textPersonName"
-                    android:imeOptions="actionDone"
-                    android:text="" />
+                <android.support.design.widget.TextInputLayout
+                    android:id="@+id/customer_city_textInputLayout"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content">
+
+                    <EditText
+                        android:id="@+id/customer_city_editText"
+                        android:layout_width="154dp"
+                        android:layout_height="match_parent"
+                        android:ems="10"
+                        android:fontFamily="monospace"
+                        android:hint="@string/city"
+                        android:imeOptions="actionDone"
+                        android:inputType="textPersonName"
+                        android:text="" />
+                </android.support.design.widget.TextInputLayout>
 
                 <Spinner
                     android:id="@+id/customer_state_spinner"
                     android:layout_width="96dp"
                     android:layout_height="match_parent" />
+                <android.support.design.widget.TextInputLayout
+                    android:id="@+id/customer_zip_code_textInputLayout"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
                 <EditText
                     android:id="@+id/customer_zip_code_editText"
                     android:layout_width="176dp"
@@ -142,6 +193,7 @@
                     android:inputType="number"
                     android:imeOptions="actionDone"
                     android:text="" />
+                </android.support.design.widget.TextInputLayout>
 
             </LinearLayout>
 
