--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -14,6 +14,12 @@
         android:layout_height="wrap_content"
         app:srcCompat="@drawable/logo" />
 
+
+
+    <android.support.design.widget.TextInputLayout
+        android:id="@+id/login_usernameTextInputLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
     <EditText
         android:id="@+id/login_UserNameEditText"
         android:layout_width="match_parent"
@@ -23,19 +29,25 @@
         android:hint="@string/login_Username"
         android:inputType="textPersonName"
         android:maxLength="@integer/MAXUSERNAMELENGTH"
-        android:text="SoftHat"/>
+        android:text=""/>
+    </android.support.design.widget.TextInputLayout>
 
+
+    <android.support.design.widget.TextInputLayout
+        android:id="@+id/login_passwordTextInputLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
     <EditText
         android:id="@+id/login_PasswordEditText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
-
+        android:fontFamily="monospace"
         android:hint="@string/login_Password"
         android:inputType="textPassword"
         android:maxLength="@integer/MAXPASSWORDLENGTH"
-        android:text="drips"/>
-
+        android:text=""/>
+    </android.support.design.widget.TextInputLayout>
     <Button
         android:id="@+id/login_LoginButton"
         android:layout_width="match_parent"
