--- a/app/src/main/res/layout/fragment_add_line.xml
+++ b/app/src/main/res/layout/fragment_add_line.xml
@@ -1,7 +1,7 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
     tools:context="project.senior.hardhats.AddLineFragment">
 
     <!-- TODO: Update blank fragment layout -->
@@ -11,22 +11,38 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <EditText
-            android:id="@+id/fragmentaddline_DescriptionEditText"
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/fragmentaddline_DescriptionTextInputLayout"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:ems="10"
-            android:hint="@string/fragmentaddline_description"
-            android:inputType="textPersonName"
-            android:singleLine="false" />
+            android:layout_height="wrap_content">
 
-        <EditText
-            android:id="@+id/fragmentaddline_QuantityEditText"
+            <EditText
+                android:id="@+id/fragmentaddline_DescriptionEditText"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:ems="10"
+                android:hint="@string/fragmentaddline_description"
+                android:inputType="textPersonName"
+                android:maxLength="35"
+                android:singleLine="false" />
+
+        </android.support.design.widget.TextInputLayout>
+
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/fragmentaddline_QuantityTextInputLayout"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:ems="10"
-            android:hint="@string/fragmentaddline_quantity"
-            android:inputType="textPersonName" />
+            android:layout_height="wrap_content">
+
+            <EditText
+                android:id="@+id/fragmentaddline_QuantityEditText"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:ems="10"
+                android:hint="@string/fragmentaddline_quantity"
+                android:inputType="textPersonName"
+                android:maxLength="3" />
+
+        </android.support.design.widget.TextInputLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -39,25 +55,41 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1" />
 
-            <EditText
-                android:id="@+id/fragmentaddline_UnitsEditText"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:ems="10"
-                android:hint="@string/fragmentaddline_units"
+            <android.support.design.widget.TextInputLayout
+                android:id="@+id/fragmentaddline_UnitsTextInputLayout"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
 
-                android:inputType="textPersonName" />
+                <EditText
+                    android:id="@+id/fragmentaddline_UnitsEditText"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+
+                    android:ems="10"
+                    android:hint="@string/fragmentaddline_units"
+                    android:inputType="textPersonName"
+
+                    android:maxLength="2" />
+
+            </android.support.design.widget.TextInputLayout>
+
         </LinearLayout>
 
-        <EditText
-            android:id="@+id/fragmentaddline_PriceEditText"
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/fragmentaddline_PriceTextInputLayout"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:ems="10"
-            android:hint="@string/fragmentaddline_price"
+            android:layout_height="wrap_content">
 
-            android:inputType="textPersonName" />
+            <EditText
+                android:id="@+id/fragmentaddline_PriceEditText"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:ems="10"
+                android:hint="@string/fragmentaddline_price"
+                android:inputType="textPersonName"
+                android:maxLength="12" />
+        </android.support.design.widget.TextInputLayout>
 
     </LinearLayout>
 </FrameLayout>
