--- a/app/src/main/res/layout/fragment_options.xml
+++ b/app/src/main/res/layout/fragment_options.xml
@@ -17,7 +17,7 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:orientation="vertical" >
 
                 <Button
@@ -42,7 +42,7 @@
                     android:imeOptions="flagNoExtractUi"
                     android:inputType="none"
                     android:maxLength="@integer/MAXUSERNAMELENGTH" />
-
+                <!--
                 <EditText
                     android:id="@+id/option_PasswordEditText"
                     android:layout_width="match_parent"
@@ -59,7 +59,7 @@
                     android:layout_height="wrap_content"
                     android:hint="@string/register_ConfirmPassword"
                     android:inputType="none" />
-
+                -->
                 <EditText
                     android:id="@+id/option_firstName_editText"
                     android:layout_width="match_parent"
@@ -144,6 +144,15 @@
                     android:inputType="none"
                     android:digits="0123456789+"/>
 
+                <EditText
+                    android:id="@+id/option_state_editText"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:ems="10"
+                    android:hint="@string/zip_code"
+                    android:inputType="none"
+                    android:digits="0123456789+"/>
+                <!--
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -161,7 +170,7 @@
                         android:layout_width="96dp"
                         android:layout_height="match_parent" />
                 </LinearLayout>
-
+                -->
             </LinearLayout>
         </ScrollView>
 
