--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -11,9 +11,8 @@
     <FrameLayout
         android:id="@+id/menu_FragmentFrameLayout"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1">
-    </FrameLayout>
+        android:layout_height="wrap_content"
+        android:layout_weight="1"></FrameLayout>
 
 <!--For tab scroll -->
     <android.support.design.widget.TabLayout
